# crm_override

./: .gitignore  README.md  package.json  pyproject.toml
crm_override/: api.py  hooks.py  modules.txt
crm_override/crm_override/doctype/crm_interaction/: crm_interaction.json  crm_interaction.py
crm_override/crm_override/doctype/crm_lead_activity/: crm_lead_activity.json  crm_lead_activity.py
crm_override/fixtures/: custom_field.json
crm_override/www/: crm.py
frontend/: custom-build.js  package.json  vite.config.js
frontend/src_override/: router.js
frontend/src_override/components/Layouts/: AppSidebar.vue
frontend/src_override/pages/: Clients.vue  Contact.vue  Deal.vue  Interaction.vue  Interactions.vue  Lead.vue  Organization.vue
