[project]
name = "crm_override"
authors = [
    { name = "Phrism", email = "phrism107@gmail.com" }
]
description = "Overrides Frappe CRM sidebar to show only Contacts and Organizations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
